# Stock_Exchange_System

./: README.md  backend.py  core_engine.cpp  docker-compose.yml
Not needed/: consumer.cpp  consumer_basic.cpp  fast_api.py  producer.py  producer_basic.py  tcp_exp.cpp  tcp_exp.py  trial1.cpp
backend/: Dockerfile  requirements.txt  sql_script.py
backend/app/: backend.py
core_engine/: CMakeLists.txt  Dockerfile
core_engine/src/: core_engine.cpp
kafkautils/: Communication.py
load_test/: Dockerfile  market_maker.py  market_maker_2.py  market_maker_high.py
stock-exchange-frontend/: Dockerfile  package-lock.json  package.json
stock-exchange-frontend/src/: App.jsx  index.css  theme.js
stock-exchange-frontend/src/api/: ApiHandler.js  auth.js  websocket.js
stock-exchange-frontend/src/components/: OrderForm.jsx
stock-exchange-frontend/src/contexts/: NotificationContext.jsx  WebSocketsContext.jsx
stock-exchange-frontend/src/pages/: Explore.jsx  Login.jsx  LoginPage.jsx  OrderHistory.jsx  Portfolio.jsx  Register.jsx  StockPage.jsx
